fixed alignment problems

--- a/src/components/hero/TopHero.css
+++ b/src/components/hero/TopHero.css
@@ -1,7 +1,6 @@
 .parent{
 
     display: flex;
-    border: 1px solid red ;
     height: 100vh;
     align-items: center;
     justify-content: center;
@@ -31,4 +30,18 @@ h2{
     text-transform: uppercase;
     letter-spacing: 8px;
     font-family: cursive;
+}
+
+.damn{
+    color: rgb(246, 159, 8);
+    font-size: 24px;
+}
+
+.para{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 31.5px;
+    margin: 30px 0;
+    color: #333;
+
 }
